--- a/cltv_app/templates/cltv_app/result.html
+++ b/cltv_app/templates/cltv_app/result.html
@@ -19,9 +19,10 @@
                 <strong>Number of Customers:</strong> {{ detailed_data.num_customers }}<br>
                 <strong>Average Purchase Value (APV):</strong> £{{ detailed_data.apv|truncate_float }}<br>
                 <strong>Average Purchase Frequency Rate (APFR):</strong> {{ detailed_data.apfr|truncate_float }}<br>
+                <strong>Average Number of Purchases:</strong> {{ detailed_data.avg_num_purchases|truncate_float }}<br>
                 <strong>Customer Value (CV):</strong> £{{ detailed_data.cv|truncate_float }}<br>
                 <strong>Time Interval:</strong> {{ detailed_data.overall_start_date }} to {{ detailed_data.overall_end_date }}<br>
-                <strong>Customer Acquisition Cost (CAC):</strong> £{{ detailed_data.cac|truncate_float }}
+                <strong>Customer Acquisition Cost (CAC):</strong> £{{ detailed_data.cac|truncate_float }}<br>
             </p>
         </div>
     </div>
@@ -36,6 +37,7 @@
                 <li><strong>Number of Customers:</strong> The total number of unique customers.</li>
                 <li><strong>Average Purchase Value (APV):</strong> The average value of each purchase. Calculated as Total Revenue divided by Number of Purchases.</li>
                 <li><strong>Average Purchase Frequency Rate (APFR):</strong> The average number of purchases per customer. Calculated as Number of Purchases divided by Number of Customers.</li>
+                <li><strong>Average Number of Purchases:</strong> The average number of purchases made by each customer, calculated by dividing the total number of purchases by the number of customers.</li>
                 <li><strong>Customer Value (CV):</strong> The average revenue generated per customer. Calculated as APV multiplied by APFR.</li>
                 <li><strong>Time Interval:</strong> The time span between the earliest start date and the latest end date in the dataset.</li>
                 <li><strong>Customer Acquisition Cost (CAC):</strong> The amount the company can afford to spend on acquiring a new customer. Typically, this is a percentage of the CLTV. In this case, we assume the company can spend up to 30% of the CLTV.</li>
