--- a/cltv_app/templates/cltv_app/result.html
+++ b/cltv_app/templates/cltv_app/result.html
@@ -7,11 +7,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-<div class="container mt-5">
-    <h1>Customer Lifetime Value (CLTV) Result</h1>
+
+<div class="container mt-5 py-4 px-4">
+    <h1 class="text-primary fw-bold" style="font-size: 2rem;">Customer Lifetime Value (CLTV) Result</h1>
     <div class="card mt-3">
         <div class="card-body">
-            <h5 class="card-title">CLTV: £{{ cltv_result.cltv|truncate_float }}</h5>
+            <h5 class="card-title text-primary fw-bold" style="font-size: 1.6rem;">CLTV: £{{ cltv_result.cltv|truncate_float }}</h5>
             <p class="card-text">
                 <strong>Average Customer Lifespan:</strong> {{ detailed_data.avg_customer_lifespan|truncate_float }} years<br>
                 <strong>Total Revenue:</strong> £{{ detailed_data.total_revenue|truncate_float }}<br>
@@ -26,6 +27,10 @@
             </p>
         </div>
     </div>
+
+    <a href="{% url 'download_report' cltv_result.id %}" class="btn btn-secondary mt-3">Download Report</a>
+    <a href="{% url 'upload_file' %}" class="btn btn-primary mt-3">Upload Another File</a>
+    
     <div class="card mt-3">
         <div class="card-body">
             <h5 class="card-title">Explanation of Metrics</h5>
@@ -44,20 +49,17 @@
             </ul>
         </div>
     </div>
+
     <div class="card mt-3">
         <div class="card-body">
-            <h5 class="card-title">Individual Customer Lifespans</h5>
-            <ul class="list-group">
-                {% for customer in detailed_data.customer_data %}
-                <li class="list-group-item">
-                    Customer {{ customer.customer_id }}: {{ customer.start_date }} to {{ customer.end_date }}, Lifespan: {{ customer.lifespan|truncate_float }} years, Total Spending: £{{ customer.revenue|truncate_float }}
-                </li>
-                {% endfor %}
-            </ul>
+            <h5 class="card-title">Revenue by Year and Customer Segment</h5>
+            <img src="data:image/png;base64,{{ plot_url }}" alt="Revenue by Year and Segment">
         </div>
     </div>
-    <a href="{% url 'upload_file' %}" class="btn btn-primary mt-3">Upload Another File</a>
+
+
 </div>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
