feat: Add function to generate insights and recommendations
adds the insights and recommendations section to the result.html template.

--- a/cltv_app/templates/cltv_app/result.html
+++ b/cltv_app/templates/cltv_app/result.html
@@ -57,6 +57,9 @@
         </div>
     </div>
 
+    {% if recommendations %}
+        {% include 'cltv_app/partials/insights.html' %}
+    {% endif %}
 
 </div>
 
