--- a/cltv_app/templates/cltv_app/result.html
+++ b/cltv_app/templates/cltv_app/result.html
@@ -1,3 +1,4 @@
+{% load static %}
 {% load custom_filters %}
 <!DOCTYPE html>
 <html lang="en">
@@ -5,6 +6,7 @@
     <meta charset="UTF-8">
     <title>CLTV Result</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://unpkg.com/htmx.org@1.9.12"></script>
 </head>
 <body>
 
@@ -57,9 +59,10 @@
         </div>
     </div>
 
-    {% if recommendations %}
-        {% include 'cltv_app/partials/insights.html' %}
-    {% endif %}
+    {% include 'cltv_app/partials/loader.html' %}
+
+    <div hx-get="{% url 'recommendations' %}" hx-trigger="load" hx-indicator="#loader"></div>
+
 
 </div>
 
