--- a/cltv_app/templates/cltv_app/partials/insights.html
+++ b/cltv_app/templates/cltv_app/partials/insights.html
@@ -29,9 +29,9 @@
 {% endcomment %}
 
 {% if recommendations %}
-<div class="card mt-3">
+<div class="card my-16">
     <div class="card-body">
-        <h5 class="card-title">
+        <div class="card-title flex gap-2 items-center">
             {% if ai_mode %}
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="orange" class="bi bi-lightbulb" viewBox="0 0 16 16">
                     <path d="M2 6a6 6 0 1 1 10.174 4.31c-.203.196-.359.4-.453.619l-.762 1.769A.5.5 0 0 1 10.5 13a.5.5 0 0 1 0 1 .5.5 0 0 1 0 1l-.224.447a1 1 0 0 1-.894.553H6.618a1 1 0 0 1-.894-.553L5.5 15a.5.5 0 0 1 0-1 .5.5 0 0 1 0-1 .5.5 0 0 1-.46-.302l-.761-1.77a2 2 0 0 0-.453-.618A5.98 5.98 0 0 1 2 6m6-5a5 5 0 0 0-3.479 8.592c.263.254.514.564.676.941L5.83 12h4.342l.632-1.467c.162-.377.413-.687.676-.941A5 5 0 0 0 8 1"/>
@@ -42,8 +42,8 @@
                 </svg>
             {% endif %}
 
-            <span>Insights and Recommendations</span>
-        </h5>
+            <h5 class="text-3xl font-bold my-8">Insights and Recommendations</h5>
+        </div>
         <ul class="card-text">
             {% for recommendation in recommendations %}
                 <li class="m-4">
