And value_card.html snippet and update insights.html to it

--- a/cltv_app/templates/cltv_app/partials/insights.html
+++ b/cltv_app/templates/cltv_app/partials/insights.html
@@ -25,7 +25,13 @@
                 </li>
             {% endfor %}
         </ul>
-        <p class="text-xs font-medium text-gray-500">For more information about Customer Life Time Value, please refer to the <a href="https://cio-wiki.org/wiki/Customer_Lifetime_Value" target="_blank" class="text-blue-500 hover:underline">cio-wiki.org</a>.</p>
+        <p class="text-xs font-medium text-gray-500">For more information about Customer Life Time Value, please refer to the following:
+            <ul class="list-disc ml-8">
+                <li><a href="https://cio-wiki.org/wiki/Customer_Lifetime_Value" target="_blank" class="text-blue-500 hover:underline">cio-wiki.org</a></li>
+                <li><a href="https://blog.hubspot.com/service/how-to-calculate-customer-lifetime-value" target="_blank" class="text-blue-500 hover:underline">blog.hubspot.com - CLTV</a></li>
+                <li><a href="https://blog.hubspot.com/service/what-does-cac-stand-for?hubs_content=blog.hubspot.com%2Fservice%2Fhow-to-calculate-customer-lifetime-value&hubs_content-cta=customer%20acquisition%20cost%20(CAC)" target="_blank" class="text-blue-500 hover:underline">blog.hubspot.com - CAC</a></li>
+            </ul>
+        </p>
     </div>
 </div>
 {% endif %}
